fixed word wrap issue with long losts

--- a/app/sass/assignments/_assignments.scss
+++ b/app/sass/assignments/_assignments.scss
@@ -7,6 +7,7 @@
     background-color: $background;
     border-radius: 5px;
     padding: 10px 30px;
+    margin-bottom: 5px;
 
     .assignment-question {
         h1 {
