--- a/app/sass/feed/_post.scss
+++ b/app/sass/feed/_post.scss
@@ -122,6 +122,8 @@
 
         .post-text {
             margin: 15px 10px 15px 10px;
+            word-wrap: break-word;
+            font-weight: bold;
         }
 
         .post-time {
